--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^8.2.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.0",
+    "prettier": "^2.6.2",
     "sass": "^1.51.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
