--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "jsx": "react",
+    "types": ["react", "jest"],
     "module": "esnext",
     "moduleResolution": "node",
     "declaration": true,
